--- a/CLEI/CLEI/templates/articulo/crear_topico.html
+++ b/CLEI/CLEI/templates/articulo/crear_topico.html
@@ -15,8 +15,8 @@
 
 <form id = "formulario" action="" enctype='multipart/form-data' method="POST">{% csrf_token %}
 	{{ formulario.as_p }}
-	<input type="submit" name="submit" value="Crear Tópico"/>
-	<input type="reset" value="Limpiar" />
+	<input type="submit" name="submit" value="Crear Tópico" class="buttons"/>
+	<input type="reset" value="Limpiar" class="buttons"/>
 </form>
 
 {% endblock %}
