--- a/CLEI/CLEI/templates/participante/crear_autor.html
+++ b/CLEI/CLEI/templates/participante/crear_autor.html
@@ -11,8 +11,8 @@
 
 <form id = "formulario" action="" enctype='multipart/form-data' method="POST">{% csrf_token %}
 	{{ formulario.as_p }}
-	<input type="submit" name="submit" value="Crear Miembro"/>
-	<input type="reset" value="Limpiar" />
+	<input type="submit" name="submit" value="Crear Autor" class="buttons"/>
+	<input type="reset" value="Limpiar" class="buttons"/>
 </form>
 
 {% endblock %}
