--- a/CLEI/CLEI/static/css/main.css
+++ b/CLEI/CLEI/static/css/main.css
@@ -52,6 +52,24 @@ ul.errorlist {
     padding: 4px 5px;
 }
 
+a{
+	display: block;
+	width: 200px;
+	height: 30px;
+	padding: 6px;
+	line-height:30px;
+	text-decoration: none;
+	text-align: center;
+	color: #FFF;
+	background-color:#49afcd;
+	position: relative;
+	border-left: 2px solid #333;
+}
+a:hover {
+	color:black;
+}
+
+
 
 
 
