--- a/CLEI/CLEI/templates/base.html
+++ b/CLEI/CLEI/templates/base.html
@@ -21,28 +21,20 @@
 	<center>
 	    <img src="{{ MEDIA_URL }}clei.png" width="70%" />
 	</center>
-	
+
 	<center>
 	    <table width="70%" bgcolor="#ffffff" frame="lhs" frame="rhs">
 		<tr>
 		    <!-- Barra izquierda -->
 		    <td  width="20%">
-			<nav>
-			    <ul class="menu">
-				<li><a href='/'>Inicio</a></li>
-				<li><a href='/articulo/create'>Crear Articulo</a></li>
-				<li><a href='/participante/miembro/create'>Crear Miembros</a></li>
-				<li><a href='/participante/autor/create'>Crear Autores</a></li>
-				<li><a href='/articulo/topico/create'>Crear Tópicos</a></li>
-				<li><a href='/articulo/asignar'>Asignar Puntuaciones</a></li>
-			    </ul>
-			</nav>
+			{% block barraizquierda %}{% endblock %}
 		    </td>
 		    <!-- Parte central -->
 		    <td colspan="3">
 			<div class="jumbotron">
 			<div class="container">
 			<div>
+			    {% block sesion %}{% endblock %}
 			    {% block encabezado %}{% endblock %}
 			</div>
 			<div>
