--- a/CLEI/CLEI/templates/inicio/inicio_miembro.html
+++ b/CLEI/CLEI/templates/inicio/inicio_miembro.html
@@ -7,15 +7,13 @@
 
 {% endblock %}
 
-{% block sesion %}
-<p align="right"><a href='{% url 'CLEI.apps.inicio.views.ingresar' %}'>Iniciar Sesión</a></p>
-<!-- <p align="right"><a href='{% url 'CLEI.apps.inicio.views.ingresar' %}'>Regístrate</a></p> -->
-{% endblock %}
+
 
 {% block barraizquierda %}
 <nav>
     <ul class="menu">
-	<li><a href='/'>Inicio</a></li>
+	<li><a href='/privado/miembro'>Inicio</a></li>
+	<li><a href='/articulo/asignar'>Asignar Puntuaciones</a></li>
     </ul>
 </nav>
 {% endblock %}
