--- a/CLEI/CLEI/templates/participante/crear_miembro.html
+++ b/CLEI/CLEI/templates/participante/crear_miembro.html
@@ -11,6 +11,19 @@
 
 {% endblock %}
 
+{% block barraizquierda %}
+<nav>
+    <ul class="menu">
+	<li><a href='/privado/presidente'>Inicio</a></li>
+	<li><a href='/articulo/create'>Crear Articulo</a></li>
+	<li><a href='/participante/miembro/create'>Crear Miembros</a></li>
+	<li><a href='/participante/autor/create'>Crear Autores</a></li>
+	<li><a href='/articulo/topico/create'>Crear Tópicos</a></li>
+	<li><a href='/articulo/asignar'>Asignar Puntuaciones</a></li>
+    </ul>
+</nav>
+{% endblock %}
+
 {% block contenido %}
 
 <form id = "formulario" action="" enctype='multipart/form-data' method="POST">{% csrf_token %}
