Seleccion de articulo por desempate

--- a/CLEI/CLEI/templates/inicio/inicio_presidente.html
+++ b/CLEI/CLEI/templates/inicio/inicio_presidente.html
@@ -17,7 +17,7 @@
 	<li><a href='/participante/miembro/create'>Crear Miembros</a></li>
 	<li><a href='/participante/autor/create'>Crear Autores</a></li>
 	<li><a href='/articulo/topico/create'>Crear Tópicos</a></li>
-	<li><a href='/articulo/asignar'>Asignar Puntuaciones</a></li>
+	<li><a href='/articulo/asignar/presidente'>Asignar Puntuaciones</a></li>
     </ul>
 </nav>
 {% endblock %}
