--- a/CLEI/CLEI/templates/inicio/inicio_miembro.html
+++ b/CLEI/CLEI/templates/inicio/inicio_miembro.html
@@ -13,7 +13,7 @@
 <nav>
     <ul class="menu">
 	<li><a href='/privado/miembro'>Inicio</a></li>
-	<li><a href='/articulo/asignar'>Asignar Puntuaciones</a></li>
+	<li><a href='/articulo/asignar/miembro'>Asignar Puntuaciones</a></li>
     </ul>
 </nav>
 {% endblock %}
