--- a/CLEI/CLEI/templates/articulo/asignar_puntuacion_presidente.html
+++ b/CLEI/CLEI/templates/articulo/asignar_puntuacion_presidente.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'base_presidente.html' %}
 
 {% block titulo %}Asignar Puntuación{% endblock %}
 
@@ -7,14 +7,6 @@
 
 {% endblock %}
 
-{% block barraizquierda %}
-<nav>
-    <ul class="menu">
-	<li><a href='/privado/presidente'>Inicio</a></li>
-	<li><a href='/articulo/asignar/presidente'>Asignar Puntuaciones</a></li>
-    </ul>
-</nav>
-{% endblock %}  
 
 {% block contenido %}
 
