Seleccion por pais Comienzo

--- a/CLEI/CLEI/templates/base_presidente.html
+++ b/CLEI/CLEI/templates/base_presidente.html
@@ -35,7 +35,7 @@
 				<li><a href='/participante/autor/create'>Crear Autores</a></li>
 				<li><a href='/articulo/topico/create'>Crear Tópicos</a></li>
 				<li><a href='/articulo/asignar/presidente'>Asignar Puntuaciones</a></li>
-				<li><a href='/clei/cantArticulos'>Selección Artículos Desempate</a></li>
+				<li><a href='/privado/clei/presidente/cantArticulos'>Selección Artículos Desempate</a></li>
 			    </ul>
 			</nav>
 		    </td>
