--- a/CLEI/CLEI/templates/clei/numero_articulos.html
+++ b/CLEI/CLEI/templates/clei/numero_articulos.html
@@ -10,9 +10,8 @@
 {% block contenido %}
 
 <form id = "formulario" action="" enctype='multipart/form-data' method="POST">{% csrf_token %}
-	<label for="num_articulos">Número de Artículos:</label>
-	<input id="num_articulos" type="number" name="articulos"/>
-	<input type="submit" name="submit" value="Seleccionar" class="buttons"/>
+	{{ formulario.as_p }}
+	<input type="submit" name="submit" value="Aceptar" class="buttons"/>
 	<input type="reset" value="Limpiar" class="buttons"/>
 </form>
 
