se añadieron dos opciones nuevas de seleccion, por proporcion de paises y por proporcion de topicos

--- a/CLEI/CLEI/templates/base_presidente.html
+++ b/CLEI/CLEI/templates/base_presidente.html
@@ -38,6 +38,8 @@
 									<li><a href='/articulo/asignar/presidente'>Asignar Puntuaciones</a></li>
 									<li><a href='/privado/clei/presidente/aceptadosEmpatados'>Selección por Desempate</a></li>
 									<li><a href='/privado/clei/presidente/seleccionPais'>Selección Por País</a></li>
+                                    <li><a href='/privado/clei/presidente/seleccionProporcionPais'>Selección por Proporción/País</a></li>
+									<li><a href='/privado/clei/presidente/seleccionProporcionTopico'>Selección por Topico</a></li>
 									<li><a href='/'>Cerrar Sesión</a></li>
 							    </ul>
 							</nav>
