--- a/CLEI/CLEI/templates/clei/mostrar_aceptados.html
+++ b/CLEI/CLEI/templates/clei/mostrar_aceptados.html
@@ -11,7 +11,7 @@
 {% block contenido %}
 
 {% if num < 0 %}
-<p> Ha excedido la cantidad de artículos por seleccionar </p>
+<font color="red"><strong> Ha excedido la cantidad de artículos por seleccionar </strong></font>
 {% endif %}
 
 {% if num >= 0 %}
