--- a/CLEI/CLEI/templates/inicio/inicio_miembro.html
+++ b/CLEI/CLEI/templates/inicio/inicio_miembro.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "base_miembro.html" %}
 
 {% block titulo %}Inicio{% endblock %}
 
@@ -7,16 +7,6 @@
 
 {% endblock %}
 
-
-
-{% block barraizquierda %}
-<nav>
-    <ul class="menu">
-	<li><a href='/privado/miembro'>Inicio</a></li>
-	<li><a href='/articulo/asignar/miembro'>Asignar Puntuaciones</a></li>
-    </ul>
-</nav>
-{% endblock %}
 
 {% block contenido %}
 
