--- a/CLEI/CLEI/templates/base_presidente.html
+++ b/CLEI/CLEI/templates/base_presidente.html
@@ -50,6 +50,7 @@
 									<li><a href='/evento/lugar/asignar'>Asignar Lugar Eventos/Sociales</a></li>
 									<li><a href='/evento/lugar/asignar_simultaneo'>Asignar Lugar Eventos/Articulos</a></li>
 									<li><a href='/actas/mostrarActas'>Generar Actas</a></li>
+									<li><a href='/eventos/'>Generar Programa</a></li>
 									
 									<li><a href='/'>Cerrar Sesión</a></li>
 							    </ul>
