--- a/CLEI/CLEI/templates/actas/mostrar.html
+++ b/CLEI/CLEI/templates/actas/mostrar.html
@@ -1,6 +1,6 @@
-	{% extends 'base_presidente.html' %}
+{% extends 'base_presidente.html' %}
 
-{% block titulo %}Crear Tópico{% endblock %}
+{% block titulo %}Actas{% endblock %}
 
 {% block encabezado %}
     <h1 style="display: block; font-size: 20px; padding: 10px; margin-left: 0; -webkit-border-radius: 4px; border-radius: 4px; color: white; text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25); background-color: #49afcd; background-image: -moz-linear-gradient(top,#5BC0DE, #2F96B4 );">Acta de articulo</h1>
