--- a/CLEI/CLEI/templates/eventos/index.html
+++ b/CLEI/CLEI/templates/eventos/index.html
@@ -1,10 +1,23 @@
-<h1> Programa CLEI 2014 </h1>
+{% extends 'base_presidente.html' %}
+
+{% block titulo %}Programa{% endblock %}
+
+{% block encabezado %}
+    <h1 style="display: block; font-size: 20px; padding: 10px; margin-left: 0; -webkit-border-radius: 4px; border-radius: 4px; color: white; text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25); background-color: #49afcd; background-image: -moz-linear-gradient(top,#5BC0DE, #2F96B4 );">Programa CLEI 2014</h1>
+
+{% endblock %}
+
+{% block contenido %}
+
 {% if eventos %}
     <ul>
     {% for evento in eventos %}
-        <li><a href="/eventos/{{ evento.id }}/">{{ evento.nombre }}</a> <b>Fecha:</b> {{ evento.fecha }} </li>
+        <li><a href="/eventos/{{ evento.tipo_evento }}/"><b>{{ evento.tipo_evento }}</a> <b>Fecha:</b> {{ evento.fecha }}  </li>
     {% endfor %}
     </ul>
+    
 {% else %}
     <p>No hay eventos disponibles.</p>
 {% endif %}
+
+{% endblock %}
