--- a/CLEI/CLEI/templates/eventos/mostrar.html
+++ b/CLEI/CLEI/templates/eventos/mostrar.html
@@ -1,8 +1,17 @@
+{% extends 'base_presidente.html' %}
 
-<h4> Evento: {{ evento.nombre }} </h4>
+{% block titulo %}Eventos{% endblock %}
+
+{% block encabezado %}
+    <h1 style="display: block; font-size: 20px; padding: 10px; margin-left: 0; -webkit-border-radius: 4px; border-radius: 4px; color: white; text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25); background-color: #49afcd; background-image: -moz-linear-gradient(top,#5BC0DE, #2F96B4 );">{{ evento.tipo_evento }}</h1>
+
+{% endblock %}
+
+{% block contenido %}
 <ul>
 	<li><b>Fecha:</b> {{ evento.fecha }}</li>
-	<li><b>Hora:</b>  {{ evento.inicio }}</li>
-	<li><b>Duracion: </b> {{ evento.duracion }} minutos.</li>
+	<li><b>Hora:</b>  {{ evento.hora_inicio }}</li>
+	<li><b>Duracion: </b> {{ evento.duracion }} horas.</li>
 </ul>
 
+{% endblock %}
